editor scrollbar color fix

--- a/src/turbopascal-03-components-editor.css
+++ b/src/turbopascal-03-components-editor.css
@@ -8,7 +8,7 @@
 {
     background-color: var(--turbopascal-bg-blue);
     color: var(--turbopascal-fg-yellow);
-    scrollbar-color: var(--turbopascal-bg-blue) var(--turbopascal-fg-turqoise);
+    scrollbar-color: var(--turbopascal-fg-blue) var(--turbopascal-bg-turqoise);
 }
 
 /* Selected text inside the editor. */
