--- a/src/turbopascal-06-dialogs.css
+++ b/src/turbopascal-06-dialogs.css
@@ -3,3 +3,16 @@
 /* * *   Components :: Dialogs  * * */
 
 /*** Dialogs TODO ***/
+.dialog
+{
+    scrollbar-color: var(--turbopascal-fg-blue) var(--turbopascal-bg-turqoise);
+}
+.dialog .frame
+{
+    background-color: var(--turbopascal-bg-grey);
+    color: var(--turbopascal-fg-white);
+}
+.dialog .frame .icons
+{
+    color: var(--turbopascal-fg-green);
+}
